add bookings and comments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none 
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
@@ -12,3 +12,10 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #spring.datasource.url
 #spring.datasource.username
 #spring.datasource.password
+spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/base
+spring.datasource.password=MVEaCr2lI9
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+
