--- a/pom.xml
+++ b/pom.xml
@@ -111,12 +111,13 @@
 							<phase>compile</phase>
 						</execution>
 					</executions>
-					<dependencies>
+					<!--<dependencies>
 						<dependency>
 							<groupId>com.puppycrawl.tools</groupId>
 							<artifactId>checkstyle</artifactId>
+
 						</dependency>
-					</dependencies>
+					</dependencies>-->
 				</plugin>
 				<plugin>
 					<groupId>com.github.spotbugs</groupId>
