--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,39 @@
                 </configuration>
             </plugin>
         </plugins>
+        <pluginManagement>
+        <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+                <systemPropertyVariables>
+                    <spring.profiles.active>test</spring.profiles.active>
+                </systemPropertyVariables>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-checkstyle-plugin</artifactId>
+            <version>3.1.2</version>
+            <configuration>
+                <configLocation>checkstyle.xml</configLocation>
+                <failOnViolation>true</failOnViolation>
+                <logViolationsToConsole>true</logViolationsToConsole>
+                <includeTestSourceDirectory>true</includeTestSourceDirectory>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>check</goal>
+                    </goals>
+                    <phase>compile</phase>
+                </execution>
+            </executions>
+
+        </plugin>
+        </plugins>
+        </pluginManagement>
     </build>
 
 </project>
