--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,9 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>coverage</id>
+        </profile>
     </profiles>
 
 </project>
