--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <modules>
         <module>server</module>
         <module>gateway</module>
+        <module>postman</module>
     </modules>
 
 	<dependencies>
