--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,8 +14,8 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #spring.datasource.password
 spring.datasource.username=postgres
 #spring.datasource.url=jdbc:postgresql://db:5432/base
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/base}
-spring.datasource.password=MVEaCr2lI9
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/shareit}
+spring.datasource.password=shareit
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
